# Panacea

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CreateTexWriteup.py  LICENSE  LICENSE.rst  Makefile  README.md  __init__.py  advanced_cube_creation.py  amplifier.py  args.py  astrometry.py  asymmoffat.py  build_cal_fibers.py  build_extraction_script.py  build_fiber_defaults.py  build_fiber_to_fiber.py  build_hpf_folderstructure.py  build_master_bias.py  build_master_frame.py  build_master_frame_all.py  build_panacea_call.py  build_residuals.py  build_standard_star_reduction_call.py  build_twi_call.py  build_twighlight_lines.py  cdc.py  characterize.py  check_wavelength_reduction.py  cofes_vis.py  combine_amp_reductions.py  combine_lrs2_experiment.py  conf.py  config.py  cosmics.py  create_advanced_script.py  (+62 more)
.github/: pull_request_template.md
.github/workflows/: draft-pdf.yml  link-check.yml  mkdocs-deploy.yml  python-tests.yml
algorithms/overview/: index.html
api/: index.html  panacea.astrometry.rst  panacea.ccd.rst  panacea.io.rst  panacea.trace.rst
api/astrometry/: index.html
api/ccd/: index.html
api/cli/: index.html
api/fiber/: index.html
api/io/: index.html
api/routine/: index.html
api/sky/: index.html
api/trace/: index.html
api/utils/: index.html
api/wavelength/: index.html
citation/citation/: index.html
community/code_of_conduct/: index.html
community/contributing/: index.html
data-products/overview/: index.html
development/dev-quickstart/: index.html
development/tests-overview/: index.html
docs/: conf.py  faq.md  guide.md  index.md
docs/algorithms/: overview.md
docs/api/: astrometry.md  ccd.md  cli.md  fiber.md  index.md  io.md  panacea.astrometry.rst  panacea.ccd.rst  panacea.cli.rst  panacea.fiber.rst  panacea.io.rst  panacea.routine.rst  panacea.sky.rst  panacea.trace.rst  panacea.utils.rst  panacea.wavelength.rst  routine.md  sky.md  trace.md  utils.md  wavelength.md
docs/citation/: citation.md
docs/community/: code_of_conduct.md  contributing.md
docs/data-products/: overview.md
docs/development/: dev-quickstart.md  tests-overview.md
docs/getting-started/: installation.md  quickstart.md
docs/joss/: readiness.md
docs/migration/: sphinx.md
docs/release_info/: changelog.md
docs/tacc/: overview.md  running.md
docs/user-guide/: cli.md  configuration.md  examples.md
faq/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/: index.html
images/: arcplot_farred.html  arcplot_orange.html  arcplot_red.html  arcplot_uv.html
lrs2_config/: bright_uv_sky.fits  dark_farred_sky.fits  dark_orange_sky.fits  grey_orange_sky.fits  grey_red_sky.fits  grey_uv_sky.fits  response_farred.fits  response_orange.fits  response_red.fits  response_uv.fits
migration/sphinx/: index.html
paper/: paper.bib  paper.md
release_info/changelog/: index.html
scripts/: run_panacea.py
search/: search_index.json
src/panacea/: __init__.py  astrometry.py  ccd.py  cli.py  fiber.py  input_utils.py  io.py  routine.py  run_panacea.py  sky.py  trace.py  utils.py  wavelength.py
src/panacea/lrs2_config/: LRS2_B_UV_mapping.txt  LRS2_R_FR_mapping.txt  bright_farred_sky.fits  bright_orange_sky.fits  bright_red_sky.fits  dark_red_sky.fits  dark_uv_sky.fits  fplane.txt  grey_farred_sky.fits  response_red.fits  uv_wavelength.fits
src/panacea/lrs2_config/Fiber_Locations/20160724/: fiber_loc_501_056_7001_LL.txt  fiber_loc_501_056_7001_LU.txt  fiber_loc_501_056_7001_RL.txt  fiber_loc_501_056_7001_RU.txt
src/panacea/lrs2_config/Fiber_Locations/20170305/: fiber_loc_004_106_033_LL.txt  fiber_loc_004_106_033_LU.txt  fiber_loc_004_106_033_RL.txt  fiber_loc_004_106_033_RU.txt  fiber_loc_008_093_054_LL.txt  fiber_loc_008_093_054_LU.txt  fiber_loc_008_093_054_RL.txt  fiber_loc_008_093_054_RU.txt  fiber_loc_012_106_033_LL.txt  fiber_loc_012_106_033_LU.txt  fiber_loc_012_106_033_RL.txt  fiber_loc_012_106_033_RU.txt  fiber_loc_013_103_019_LL.txt  fiber_loc_013_103_019_LU.txt  fiber_loc_013_103_019_RL.txt  fiber_loc_013_103_019_RU.txt  fiber_loc_016_104_026_LL.txt  fiber_loc_016_104_026_LU.txt  fiber_loc_016_104_026_RL.txt  fiber_loc_016_104_026_RU.txt  fiber_loc_017_086_022_LL.txt  fiber_loc_017_086_022_LU.txt  fiber_loc_017_086_022_RL.txt  fiber_loc_017_086_022_RU.txt  fiber_loc_020_095_004_LL.txt  fiber_loc_020_095_004_LU.txt  fiber_loc_020_095_004_RL.txt  fiber_loc_020_095_004_RU.txt  fiber_loc_024_083_023_LL.txt  fiber_loc_024_083_023_LU.txt  fiber_loc_024_083_023_RL.txt  fiber_loc_024_083_023_RU.txt  fiber_loc_025_076_032_LL.txt  fiber_loc_025_076_032_LU.txt  fiber_loc_025_076_032_RL.txt  fiber_loc_025_076_032_RU.txt  fiber_loc_027_085_001_LL.txt  fiber_loc_027_085_001_LU.txt  fiber_loc_027_085_001_RL.txt  fiber_loc_027_085_001_RU.txt  (+33 more)
src/panacea/lrs2_config/Fiber_Locations/20170309/: fiber_loc_307_074_076_LL.txt  fiber_loc_307_074_076_LU.txt
tacc/overview/: index.html
tacc/running/: index.html
tests/: conftest.py  test_calibration_utils.py  test_cli.py  test_cli_smoke.py  test_datadir.py  test_input_utils.py  test_parsers.py  test_pipeline_smoke.py  test_resources.py  test_sample_data.py
tests/fixtures/: sample_data.py
user-guide/cli/: index.html
user-guide/configuration/: index.html
user-guide/examples/: index.html
(+8 files in other folders)
