[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panacea"
version = "0.9.0"
description = "Panacea: LRS2 data-reduction pipeline for the Hobby-Eberly Telescope"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Greg Zeimann", email = "gzeimann@example.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
  "numpy>=1.22",
  "scipy>=1.8",
  "astropy>=5.0",
  "matplotlib>=3.5",
  "pyyaml>=6.0",
  "tqdm>=4.60",
]

[project.urls]
Homepage = "https://github.com/grzeimann/Panacea"
Repository = "https://github.com/grzeimann/Panacea"
Issues = "https://github.com/grzeimann/Panacea/issues"

# --- Packaging configuration ---
[tool.setuptools]
# Disable package discovery; treat repo as single-module layout
packages = []
# Tell setuptools to ship this single Python module:
py-modules = ["full_lrs2_reduction"]

# --- Optional script entry point (if main() exists) ---
[project.scripts]
panacea-lrs2 = "full_lrs2_reduction:main"

# --- Optional extras for development & docs ---
[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.5",
  "black>=24.0",
  "mypy>=1.8",
]
docs = [
  "sphinx>=7",
  "myst-parser>=2",
  "furo>=2024.0.0",
]