[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panacea"
version = "0.9.0"
description = "Panacea: LRS2 data-reduction pipeline for the Hobby-Eberly Telescope"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Greg Zeimann", email = "gregz@astro.as.utexas.edu" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
  "numpy>=1.22,<2.0",
  "scipy>=1.8",
  "astropy>=5,<6",
  "matplotlib>=3.5",
  "pyyaml>=6.0",
  "tqdm>=4.60",
  "requests",
  "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/grzeimann/Panacea"
Repository = "https://github.com/grzeimann/Panacea"
Issues = "https://github.com/grzeimann/Panacea/issues"

# --- Packaging configuration ---
[project.scripts]
panacea-lrs2 = "panacea.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["panacea*"]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.14,<0.15",
  "black>=24.0",
  "mypy>=1.8",
  "pre-commit>=3.6",
]
docs = [
  "sphinx>=7",
  "myst-parser>=2",
  "furo>=2024.0.0",
  "pydata-sphinx-theme>=0.15",
  "sphinx-book-theme>=1.1",
  "sphinx_rtd_theme>=2.0",
  "linkify-it-py>=2",
]
[tool.setuptools.package-data]
panacea = ["lrs2_config/*.dat", "lrs2_config/*.fits", "lrs2_config/*.txt", "lrs2_config/Fiber_Locations/*/*.txt"]

# Ruff linter configuration
[tool.ruff]
line-length = 120
# Target the lowest supported Python for safe syntax checks
target-version = "py39"
